--- a/index_661463050.html
+++ b/index_661463050.html
@@ -18,6 +18,8 @@
     </header>
 
     <nav class="navbar">
+        
+        
         <a href="#COVID-19" class="covid" onclick="changeImage('./Resource/banner/6.jpg')">COVID-19 </a>
         <a href="#Infected" class="infected" onclick="changeImage('./Resource/banner/8.jpg')">Infected </a>
         <a href="#SELFCARE" class="selfcare" onclick="changeImage('./Resource/banner/9.jpg')">SELFCARE </a>
@@ -495,7 +497,9 @@
                 </div>
             </div>
 
-            <script src="./changeimg.js"></script>
+            <script src="./changeimg.js">
+
+            </script>
         </section>
     </div>
 </body>
